[package]
name = "riscv-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] } 
riscv = "0.12.1"
riscv-rt = { version = "0.13.0", optional = true }
panic-halt = "1.0.0"
riscv-pac = { path = "../riscv_pac"}
portable-atomic = { version = "1.9.0", default-features = false}

[build-dependencies]
riscv-rt = "0.13.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"

[features]
default = ["rt"]
rt = ["riscv-rt"]

[[example]]
name = "gpio_example"
harness = false
test = false