[package]
name = "riscv-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] } 
nb = "1.1.0"
riscv = "0.12.1"
riscv-pac = { path = "../riscv_pac"}
riscv-rt = "0.13.0"
portable-atomic = { version = "1.9.0", default-features = false}
volatile = "0.2.6"